Refactoring
- Update .editconfig
- Update detekt.yml
- Update dependencies
- Update dependency management by libs.versions
- Update README.md
- Add new tests